Fixed responsiveness issue on mobile

--- a/public/assets/sass/media.scss
+++ b/public/assets/sass/media.scss
@@ -38,10 +38,6 @@
     }
   }
 
-  header {
-    height: 80vh !important;
-  }
-
   section {
     padding-top: 5rem;
     padding-bottom: 5rem;
